--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<html><h1>Welcome to Hotel Sarathi</h1></html>
+<html><h1 style="text-align:center">Welcome to Hotel Sarathi</h1>
+<style>
+.container {
+  height: 200px;
+  position: relative;
+  border: 3px solid green;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+</style>
+<div class="container">
+<div class="vertical-center">
+<h2 style="text-align:center">Site is under maintenance<h2></h2>
+</div>
+</div>
+</html>
