--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><h1 style="text-align:center">Welcome to Hotel Sarathi</h1>
+<html><h1 style="text-align:center;color:red;">Hotel Sarathi</h1>
 <style>
 .container {
   height: 200px;
@@ -16,7 +16,7 @@
 </style>
 <div class="container">
 <div class="vertical-center">
-<h2 style="text-align:center">Site is under maintenance</h2>
+<h2>Site is under maintenance</h2>
 </div>
 </div>
 </html>
