--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </style>
 <div class="container">
 <div class="vertical-center">
-<h2>Site is under maintenance</h2>
+<h2 style="text-align:center;color:blue;">Site is under maintenance</h2>
 </div>
 </div>
 </html>
