--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  text-align: center;
 }
 </style>
 <div class="container">
