--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </style>
 <div class="container">
 <div class="vertical-center">
-<h2 style="text-align:center;color:blue;">Site is under maintenance...</h2>
+<h2 style="color:blue;">Site is under maintenance...</h2>
 </div>
 </div>
 </html>
